 $Id: ChangeLog,v 1.131.2.3 2007/06/23 07:24:47 uehira Exp $

2007-06-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* added src/filter.h
	* src/wtape.c : remove err_sys() (not used).
	
2007-06-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.83
	* Version 1.1.83-LIB
	* following the Changelog commemts of the HEAD branch
		* src/hypomhc.c : bug fixed in smode

	        * src/wdisk.c: 2007.1.15 i<1000000 -> 5000000,
		               BUFSZ 500000->1000000, BUFLIM 1000000->5000000
		* src/cormeisei.c: MAX_SEC_SIZE 1000000 -> 5000000
		* src/wadd2.c: MAXSIZE 1M->5M
		* src/wadd.c: MAXSIZE 1M->5M
		* src/raw2mon.c: MAXSIZE 1M->5M, SIZE_WBUF 300K->1M
		* src/pmon.c: 'ch_file not found' message fixed

		* src/win.c: fixed a bug in set_geometry() for resize or OPEN.
	
2006-09-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* begin BRANCH_LIB branch
	* make static library
	* Version 1.1.80-LIB

2006-09-02  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/send_raw.c: added 'no resend' mode (-R)

2006-08-29  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/win.c: fixed a bug in locate (by Uehira-san).
	             fixed a bug reading pickfile.
	             add Expert mode option.
	              -za autpk/evdet has no effect w/o shift-key
	              -zc not display calculated travel-times
	              -zac both above
	* Version 1.1.80 released.

2006-05-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* udp_dest.c : bug fixed.
	* imported experimental codes
	  winrawsrvd : raw data server started by inetd.
	  winrawcli_test : test code of raw data client.
	* Version 1.1.79 released.
	
2006-03-27  Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* wintowin: BUG FIX (appealed by T. UEMURA)
	* Version 1.1.78 released.

2006-03-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2raw: check data was processed or not. (appealed by T. UEMURA)

2006-03-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win2raw: added new mode in '-m' option.