@@ -1,4 +1,4 @@
-/* $Id: raw_mon.c,v 1.6.4.1 2006/09/25 15:00:57 uehira Exp $ */
+/* $Id: raw_mon.c,v 1.6.4.2 2007/08/26 02:38:34 uehira Exp $ */
 /* "raw_mon.c"      7/2/93,6/17/94,6/28/94    urabe */
 /*                  3/17/95 write_log(), 4/17/95 MAX_SR safety */
 /*                  usleep -> sleep */
@@ -267,7 +267,7 @@ main(argc,argv)
   if(argc>5) logfile=argv[5];
   else
     {
-      *logfile=0;
+      logfile=NULL;
       if (daemon_mode)
 	syslog_mode = 1;
     }
