@@ -1,4 +1,4 @@
-/* $Id: wdisk.c,v 1.17.2.2 2007/06/19 06:08:05 uehira Exp $ */
+/* $Id: wdisk.c,v 1.17.2.3 2007/08/26 02:38:34 uehira Exp $ */
 /*
   program "wdisk.c"   4/16/93-5/13/93,7/2/93,7/5/94  urabe
                       1/6/95 bug in adj_time fixed (tm[0]--)
@@ -342,7 +342,7 @@ main(argc,argv)
    if(argc>3) logfile=argv[3];
    else 
      {
-       *logfile=0;
+       logfile=NULL;
        if (daemon_mode)
 	 syslog_mode = 1;
      }
