@@ -1,5 +1,9 @@
- $Id: ChangeLog,v 1.131.2.3 2007/06/23 07:24:47 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.4 2007/08/26 02:38:33 uehira Exp $
 
+2007-08-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* bug fix in logile name initialization.
+	  order.c pmon.c raw_mon.c recvts.c wdisk.c wdiskts.c
+	
 2007-06-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* added src/filter.h
 	* src/wtape.c : remove err_sys() (not used).
